--- a/COVID-19 Retweet Prediction Report.ipynb
+++ b/COVID-19 Retweet Prediction Report.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COVID-19 Retweet Prediction\n",
-    "\n",
-    "## Team Members\n",
+    "# Team Members\n",
     "1. Aaron Khoo\n",
     "2. Calvin Yusnoveri \n",
     "3. Amarjyot Kaur Narula\n",
@@ -17,14 +15,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task Description"
+    "# Task Description\n",
+    "\n",
+    "1 paragraph / a few succinct lines desc of the task."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset Description\n",
+    "# Dataset Description\n",
     "\n",
     "Data downloaded from here: https://data.gesis.org/tweetscov19/#dataset\n",
     "\n",
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preprocessing\n",
+    "# Preprocessing\n",
     "\n",
     "Clean Data (Final structure/form of data before it is fed into the model):\n",
     "1. Tweet Id: Long. - NOT USED\n",
@@ -80,7 +80,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Architecture\n",
+    "## Hashtags & Mentions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Timestamp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sentiment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Architecture\n",
     "\n",
     "We use ensemble methods (insert image):\n",
     "1. 0-classifier (print out layer)\n",
@@ -91,31 +112,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Results\n",
+    "# Results\n",
     "\n",
-    "Loss curve image.\n",
+    "Loss curve image. (Maybe save to .txt when training so can read independently and display with matplotlib independently.)\n",
     "\n",
-    "Accuracy on train and test set.\n",
+    "Accuracy on train and test set. (just run test.py on test set)\n",
     "\n",
-    "Validation images."
+    "Validation images. (just screenshot gui)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Discussion\n",
+    "# Discussion\n",
     "\n",
     "comparing with state of the art.\n",
     "\n",
-    "possible issues"
+    "possible issues. possible improvements"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## GUI\n",
+    "# GUI\n",
     "\n",
     "Step-by-step Usage:\n",
     "1. run xxx\n",
@@ -127,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sources\n",
+    "# Sources\n",
     "\n",
     "1. Source code: https://github.com/arglux/50021-ai-project\n",
     "2. Report: \n",
@@ -158,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
