Added the Entities features for the dataset

--- a/COVID-19 Retweet Prediction Report.ipynb
+++ b/COVID-19 Retweet Prediction Report.ipynb
@@ -8,7 +8,7 @@
     "1. Aaron Khoo\n",
     "2. Calvin Yusnoveri \n",
     "3. Amarjyot Kaur Narula\n",
-    "4. Joseph Chng"
+    "4. Joseph Chng 1003811"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
