Entities part of the report done

--- a/COVID-19 Retweet Prediction Report.ipynb
+++ b/COVID-19 Retweet Prediction Report.ipynb
@@ -87,7 +87,9 @@
    "metadata": {},
    "source": [
     "## Entities\n",
-    "a"
+    "The entities that are encapsulated in this dataset are aggregated from the original tweet text. This text will then go through a Fast Entity Linker query and find annotated text that can be found and set them as an entity for the text that we pass through. For every entity, it also has its corresponding log-likelihood confidence score which is used as a global threshold for linking.\n",
+    "\n",
+    "For this project, we did some preprocessing of the raw entity data from the dataset. With the format of the entities for each tweet data being \"original text:annotated text:score;original text:annotated text:score\", we will be able to get the number of entities that is found on each tweet. We thus split the entities column data and obtain the length of each entities list to get the number of entities for each tweet. The column that contains the number of entities for each tweet will then undergo logarithm transformation to reduce the magnitude of the number of entities found in the dataset and creates a better model. These log-transformed entities data will then be used for the training of the prediction model and helps in creating a stronger linkage between the data and the number of retweets. "
    ]
   },
   {
