added entities preprocessing code part on the report

--- a/COVID-19 Retweet Prediction Report.ipynb
+++ b/COVID-19 Retweet Prediction Report.ipynb
@@ -686,6 +686,92 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1912070\n",
+      "              Tweet Id                          Username  \\\n",
+      "0  1255980348229529601  fa5fd446e778da0acba3504aeab23da5   \n",
+      "1  1255981220640546816  547501e9cc84b8148ae1b8bde04157a4   \n",
+      "2  1255981244560683008  840ac60dab55f6b212dc02dcbe5dfbd6   \n",
+      "3  1255981472285986816  37c68a001198b5efd4a21e2b68a0c9bc   \n",
+      "4  1255981581354905600  8c3620bdfb9d2a1acfdf2412c9b34e06   \n",
+      "5  1255982235662024704  491a98bbc105806cb67f46f5e3f3d888   \n",
+      "6  1255982852371554304  916dec763c84916c929bb257ff96187d   \n",
+      "7  1255983890524786689  86e70e2bdc63363a4fecce1c9ba60e0f   \n",
+      "8  1255985637246865410  d6fff22276aad81631affdecb83a8d9a   \n",
+      "9  1255985687062601729  2af96845573e5256307de4504c9051fc   \n",
+      "\n",
+      "                        Timestamp  #Followers  #Friends  #Retweets  \\\n",
+      "0  Thu Apr 30 22:00:24 +0000 2020       29697     24040          0   \n",
+      "1  Thu Apr 30 22:03:52 +0000 2020         799      1278          4   \n",
+      "2  Thu Apr 30 22:03:58 +0000 2020         586       378          1   \n",
+      "3  Thu Apr 30 22:04:52 +0000 2020         237       168          0   \n",
+      "4  Thu Apr 30 22:05:18 +0000 2020         423       427          0   \n",
+      "5  Thu Apr 30 22:07:54 +0000 2020          52        46          0   \n",
+      "6  Thu Apr 30 22:10:21 +0000 2020       70185     10625        213   \n",
+      "7  Thu Apr 30 22:14:29 +0000 2020         507       379          5   \n",
+      "8  Thu Apr 30 22:21:25 +0000 2020         101       127          0   \n",
+      "9  Thu Apr 30 22:21:37 +0000 2020         414      2151          1   \n",
+      "\n",
+      "   #Favorites                                           Entities Sentiment  \\\n",
+      "0           0                                              null;      1 -1   \n",
+      "1           6                                              null;      1 -1   \n",
+      "2           2                                              null;      2 -1   \n",
+      "3           0                                              null;      1 -1   \n",
+      "4           0  i hate u:I_Hate_U:-1.8786140035817729;quaranti...      1 -4   \n",
+      "5           0  god forbid:God_Forbid:-1.2640735877261988;covi...      2 -4   \n",
+      "6         926  beijing:Beijing:-1.4222174822860647;covid 19:C...      1 -4   \n",
+      "7           6                                              null;      1 -4   \n",
+      "8           0           stealth:Stealth_game:-2.646174787470186;      1 -3   \n",
+      "9           3         quarantine:Quarantine:-2.3096035868012508;      3 -2   \n",
+      "\n",
+      "                Mentions                          Hashtags  \\\n",
+      "0                  null;  Opinion Next2blowafrica thoughts   \n",
+      "1                  null;                             null;   \n",
+      "2                  null;                             null;   \n",
+      "3                  null;                             null;   \n",
+      "4                  null;                             null;   \n",
+      "5  Danartman BishopStika                             null;   \n",
+      "6                  null;                             null;   \n",
+      "7                  null;                             null;   \n",
+      "8                  null;                             null;   \n",
+      "9            AlanCane604                          COVID19.   \n",
+      "\n",
+      "                                                URLs  No. of Entities  \n",
+      "0                                              null;                0  \n",
+      "1                                              null;                0  \n",
+      "2  https://www.bbc.com/news/uk-england-beds-bucks...                0  \n",
+      "3  https://lockdownsceptics.org/2020/04/30/latest...                0  \n",
+      "4                                              null;                2  \n",
+      "5  https://www.dailymail.co.uk/health/article-826...                3  \n",
+      "6  https://canoe.com/news/world/u-s-mulling-poten...                3  \n",
+      "7  https://www.dispatch.com/news/20200430/conditi...                0  \n",
+      "8  http://www.safetyhealthnews.com/covid-prompted...                1  \n",
+      "9                                              null;                1  \n"
+     ]
+    }
+   ],
+   "source": [
+    "entities = data['Entities'].str.split(\";\")\n",
+    "entity_no = []\n",
+    "for ent in entities:\n",
+    "    ent.pop()\n",
+    "    if ent[0]=='null':\n",
+    "        entity_no.append(0)\n",
+    "    else:\n",
+    "        entity_no.append(len(ent))\n",
+    "data['No. of Entities'] = entity_no\n",
+    "print(len(entities))\n",
+    "print(data.head(10))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -767,7 +853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
