--- a/COVID-19 Retweet Prediction Report.ipynb
+++ b/COVID-19 Retweet Prediction Report.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Team Members\n",
     "1. Aaron Khoo\n",
-    "2. Calvin Yusnoveri \n",
+    "2. Calvin Yusnoveri (1002911)\n",
     "3. Amarjyot Kaur Narula\n",
-    "4. Joseph Chng 1003811"
+    "4. Joseph Chng (1003811)"
    ]
   },
   {
@@ -17,7 +17,11 @@
    "source": [
     "# Task Description\n",
     "\n",
-    "As COVID-19 impacts our daily routine and changed the norms that we accepted prior to the pandemic, it is thus an important task for us to quantify its impacts on the global stage. One example of such changes is the explosion of social media usage such as Twitter and Youtube, where most people who are not able to move freely, shares their thoughts through such platforms. Twitter in particular, provides a platform that allows the users to post their thoughts in a succint manner and add hashtags or mentions to increase the tweet's exposure on the platform. Our task will thus be to predict the number of retweets a tweet that is COVID-19 related will have using the TweetsCOV-19 dataset."
+    "As COVID-19 impacts our daily routine and changed the norms that we accepted prior to the pandemic, there are some interests in quantifying its impacts on the global stage. One way to measure such impact is to monitor the explosion of activity in social media usage such as Twitter and Youtube, where most people who are not able to move freely, shares their thoughts through such platforms. Twitter in particular, provides a platform that allows the users to post their thoughts in a succint manner and add hashtags or mentions to increase the tweet's exposure on the platform. Our task will thus be to predict the number of retweets a tweet that is COVID-19 related will have using the TweetsCOV-19 dataset.\n",
+    "\n",
+    "At the end of this project, we created a Linear Regression Model and an interactive GUI to predict retweet count based on input parameters found in TweetsCOV-19 dataset. Custome values can also be input into the model.\n",
+    "\n",
+    "![Final Result](assets/gui-result.PNG)"
    ]
   },
   {
@@ -46,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -260,19 +264,21 @@
     "In order to train our prediction model, we have also done some preprocessing of the features that are available in the dataset. All these changes to the raw features allow us to link these processed features to the final retweet prediction in a more precise manner. \n",
     "\n",
     "Clean Data (Final structure/form of data before it is fed into the model):\n",
-    "1. #Followers: Integer.\n",
-    "2. #Friends: Integer.\n",
-    "3. #Retweets: Integer.\n",
-    "4. #Favorites: Integer.\n",
-    "5. Positive (Sentiment): Integer.\n",
-    "6. Negative (Sentiment): Integer.\n",
-    "7. Sentiment Disparity: Integer.\n",
-    "8. No. of Entities: Integer.\n",
-    "9. Day of Week: Integer.\n",
-    "10. Month: Integer.\n",
-    "11. Time Int: Integer.\n",
-    "12. Hashtags Embedding: (25, 1) Vector.\n",
-    "13. Mentions Embedding: (25, 1) Vector."
+    "1. #Followers: Float. Log transformed: `log_10(x + 1)`\n",
+    "2. #Friends: Float. Log transformed: `log_10(x + 1)`\n",
+    "3. #Favorites: Float. Log transformed: `log_10(x + 1)`\n",
+    "4. Positive (Sentiment): Float. Scaled.\n",
+    "5. Negative (Sentiment): Float. Scaled.\n",
+    "6. Sentiment Disparity: Float. Scaled.\n",
+    "7. No. of Entities: Float. Log transformed: `log_10(x + 1)`\n",
+    "8. Day of Week: Float. One-Hot Vector. (7, ) Vector.\n",
+    "9. Time Int: Float. Log transformed: `log_10(x + 1)`\n",
+    "10. Hashtags Embedding: (25, ) Vector.\n",
+    "11. Mentions Embedding: (25, ) Vector.\n",
+    "\n",
+    "In total, the input dimension (first layer) is `8 + 7 + 25 + 25 = (65, )`.\n",
+    "\n",
+    "The target is: #Retweets: Integer. Log transformed: `log_10(x + 1)`"
    ]
   },
   {
@@ -281,12 +287,12 @@
    "source": [
     "## Hashtags & Mentions\n",
     "\n",
-    "Both Hashtags and Mentions are in the form of list of Strings seperated by whitespace. Thus, in order to create tractable input for the model, embeddings are created for both the Hashtags and Mentions of size `(25, 1)`."
+    "Both Hashtags and Mentions are in the form of list of Strings seperated by whitespace. Thus, in order to create tractable input for the model, embeddings are created for both the Hashtags and Mentions of size `(25, )`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -299,8 +305,8 @@
     }
    ],
    "source": [
-    "hashtags_embeddings = Word2Vec.load('./data/hashtag_embeddings')\n",
-    "mentions_embeddings = Word2Vec.load('./data/mention_embeddings')\n",
+    "hashtag_embeddings = Word2Vec.load('./data/hashtag_embeddings')\n",
+    "mention_embeddings = Word2Vec.load('./data/mention_embeddings')\n",
     "\n",
     "hashtags_vocab = hashtag_embeddings.wv.index_to_key\n",
     "mentions_vocab = mention_embeddings.wv.index_to_key\n",
@@ -343,16 +349,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These embeddings are trained over 5 epoch and only considers String symbols that occur at least 200 timex to be relevant. This is done by passing the argument `min_count=200`, when training."
+    "These embeddings are trained over 5 epoch and only considers String symbols that occur at least 200 timex to be relevant. This is done by passing the argument `min_count=200`, when training. The hashtags and mentions vocabularies are saved in: `data`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using these embeddings, both Hashtags and Mentions column are iterated over and converted into vectors of size `(25, 1)`. With these rules: \n",
-    "- For those Hashtags/Mentions cells that contain `null` 0 vector of size 25 is outputted\n",
-    "- For those Hashtags/Mentions cells that contain String symbols that occur than less 200 times (hence, not in vocab), they're treated as null\n",
+    "Using these embeddings, both Hashtags and Mentions column are iterated over and converted into vectors of size `(25, )`. With these rules: \n",
+    "- For those Hashtags/Mentions cells that contain `null`, 0 vector of size 25 is outputted\n",
+    "- For those Hashtags/Mentions cells that contain String symbols that occur than less 200 times (hence, not in vocab), they're treated as `null`\n",
     "- For those Hashtags/Mentions cells that contain multiple String symbols, their embedding vectors are summed"
    ]
   },
@@ -619,7 +625,7 @@
    ],
    "source": [
     "sorted_by_retweets = data.sort_values(by='#Retweets', ascending=False)\n",
-    "sorted_by_retweets.head(10) # observe that most Mentions and Hashtags are null"
+    "sorted_by_retweets.head(10) # observe that most Mentions and Hashtags are null for top #Retweets"
    ]
   },
   {
@@ -682,79 +688,113 @@
     "## Entities\n",
     "The entities that are encapsulated in this dataset are aggregated from the original tweet text. This text will then go through a Fast Entity Linker query and find annotated text that can be found and set them as an entity for the text that we pass through. For every entity, it also has its corresponding log-likelihood confidence score which is used as a global threshold for linking.\n",
     "\n",
-    "For this project, we did some preprocessing of the raw entity data from the dataset. With the format of the entities for each tweet data being \"original text:annotated text:score;original text:annotated text:score\", we will be able to get the number of entities that is found on each tweet. We thus split the entities column data and obtain the length of each entities list to get the number of entities for each tweet. The column that contains the number of entities for each tweet will then undergo logarithm transformation to reduce the magnitude of the number of entities found in the dataset and creates a better model. These log-transformed entities data will then be used for the training of the prediction model and helps in creating a stronger linkage between the data and the number of retweets. "
+    "For this project, we did some preprocessing of the raw entity data from the dataset. With the format of the entities for each tweet data being \"original text:annotated text:score;original text:annotated text:score\", we will be able to get the number of entities that is found on each tweet. We thus split the entities column data and obtain the length of each entities list to get the number of entities for each tweet. \n",
+    "\n",
+    "The column that contains the number of entities for each tweet will then undergo logarithmic transformation of the form `log(x+1)` before they're passed into the model. These log-transformed entity count data will then be used for the training of the prediction model and helps in creating a stronger linkage between the data and the number of retweets. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1912070\n",
-      "              Tweet Id                          Username  \\\n",
-      "0  1255980348229529601  fa5fd446e778da0acba3504aeab23da5   \n",
-      "1  1255981220640546816  547501e9cc84b8148ae1b8bde04157a4   \n",
-      "2  1255981244560683008  840ac60dab55f6b212dc02dcbe5dfbd6   \n",
-      "3  1255981472285986816  37c68a001198b5efd4a21e2b68a0c9bc   \n",
-      "4  1255981581354905600  8c3620bdfb9d2a1acfdf2412c9b34e06   \n",
-      "5  1255982235662024704  491a98bbc105806cb67f46f5e3f3d888   \n",
-      "6  1255982852371554304  916dec763c84916c929bb257ff96187d   \n",
-      "7  1255983890524786689  86e70e2bdc63363a4fecce1c9ba60e0f   \n",
-      "8  1255985637246865410  d6fff22276aad81631affdecb83a8d9a   \n",
-      "9  1255985687062601729  2af96845573e5256307de4504c9051fc   \n",
-      "\n",
-      "                        Timestamp  #Followers  #Friends  #Retweets  \\\n",
-      "0  Thu Apr 30 22:00:24 +0000 2020       29697     24040          0   \n",
-      "1  Thu Apr 30 22:03:52 +0000 2020         799      1278          4   \n",
-      "2  Thu Apr 30 22:03:58 +0000 2020         586       378          1   \n",
-      "3  Thu Apr 30 22:04:52 +0000 2020         237       168          0   \n",
-      "4  Thu Apr 30 22:05:18 +0000 2020         423       427          0   \n",
-      "5  Thu Apr 30 22:07:54 +0000 2020          52        46          0   \n",
-      "6  Thu Apr 30 22:10:21 +0000 2020       70185     10625        213   \n",
-      "7  Thu Apr 30 22:14:29 +0000 2020         507       379          5   \n",
-      "8  Thu Apr 30 22:21:25 +0000 2020         101       127          0   \n",
-      "9  Thu Apr 30 22:21:37 +0000 2020         414      2151          1   \n",
-      "\n",
-      "   #Favorites                                           Entities Sentiment  \\\n",
-      "0           0                                              null;      1 -1   \n",
-      "1           6                                              null;      1 -1   \n",
-      "2           2                                              null;      2 -1   \n",
-      "3           0                                              null;      1 -1   \n",
-      "4           0  i hate u:I_Hate_U:-1.8786140035817729;quaranti...      1 -4   \n",
-      "5           0  god forbid:God_Forbid:-1.2640735877261988;covi...      2 -4   \n",
-      "6         926  beijing:Beijing:-1.4222174822860647;covid 19:C...      1 -4   \n",
-      "7           6                                              null;      1 -4   \n",
-      "8           0           stealth:Stealth_game:-2.646174787470186;      1 -3   \n",
-      "9           3         quarantine:Quarantine:-2.3096035868012508;      3 -2   \n",
-      "\n",
-      "                Mentions                          Hashtags  \\\n",
-      "0                  null;  Opinion Next2blowafrica thoughts   \n",
-      "1                  null;                             null;   \n",
-      "2                  null;                             null;   \n",
-      "3                  null;                             null;   \n",
-      "4                  null;                             null;   \n",
-      "5  Danartman BishopStika                             null;   \n",
-      "6                  null;                             null;   \n",
-      "7                  null;                             null;   \n",
-      "8                  null;                             null;   \n",
-      "9            AlanCane604                          COVID19.   \n",
-      "\n",
-      "                                                URLs  No. of Entities  \n",
-      "0                                              null;                0  \n",
-      "1                                              null;                0  \n",
-      "2  https://www.bbc.com/news/uk-england-beds-bucks...                0  \n",
-      "3  https://lockdownsceptics.org/2020/04/30/latest...                0  \n",
-      "4                                              null;                2  \n",
-      "5  https://www.dailymail.co.uk/health/article-826...                3  \n",
-      "6  https://canoe.com/news/world/u-s-mulling-poten...                3  \n",
-      "7  https://www.dispatch.com/news/20200430/conditi...                0  \n",
-      "8  http://www.safetyhealthnews.com/covid-prompted...                1  \n",
-      "9                                              null;                1  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Entities</th>\n",
+       "      <th>No. of Entities</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>null;</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>null;</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>null;</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>null;</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>i hate u:I_Hate_U:-1.8786140035817729;quaranti...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>god forbid:God_Forbid:-1.2640735877261988;covi...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>beijing:Beijing:-1.4222174822860647;covid 19:C...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>null;</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>stealth:Stealth_game:-2.646174787470186;</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>quarantine:Quarantine:-2.3096035868012508;</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            Entities  No. of Entities\n",
+       "0                                              null;                0\n",
+       "1                                              null;                0\n",
+       "2                                              null;                0\n",
+       "3                                              null;                0\n",
+       "4  i hate u:I_Hate_U:-1.8786140035817729;quaranti...                2\n",
+       "5  god forbid:God_Forbid:-1.2640735877261988;covi...                3\n",
+       "6  beijing:Beijing:-1.4222174822860647;covid 19:C...                3\n",
+       "7                                              null;                0\n",
+       "8           stealth:Stealth_game:-2.646174787470186;                1\n",
+       "9         quarantine:Quarantine:-2.3096035868012508;                1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -767,8 +807,8 @@
     "    else:\n",
     "        entity_no.append(len(ent))\n",
     "data['No. of Entities'] = entity_no\n",
-    "print(len(entities))\n",
-    "print(data.head(10))"
+    "# print(len(entities))\n",
+    "data[['Entities','No. of Entities']].head(10)"
    ]
   },
   {
@@ -812,10 +852,38 @@
    "source": [
     "# GUI\n",
     "\n",
-    "Step-by-step Usage:\n",
-    "1. run xxx\n",
-    "2. click button\n",
-    "3. done"
+    "## Running the GUI\n",
+    "0. Download the dataset called `TweetsCOV19_052020.tsv.gz` and save it in `data` directory. Download from: https://zenodo.org/record/4593502#.YQunN4gzZPY\n",
+    "1. Open command line or terminal and navigate to the project folder.\n",
+    "2. Run `pip install -r requirements.txt`. Ensure that `PyQt5`, `gensim` and `torch` are installed among other things.\n",
+    "3. Navigate to `gui` with `cd gui`\n",
+    "4. Then, run `app.py` with `python app.py` or with your IDLE. Note: `app.py` must be executed from `./gui` NOT `root`!\n",
+    "\n",
+    "![Open GUI Successfully](assets/gui-open.PNG)\n",
+    "\n",
+    "Opening the GUI may take a while (~3 mins) because it will load the dataset from `data/TweetsCOV19_052020.tsv.gz`. Thus, ensure that this file exist in `data` folder!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using the GUI\n",
+    "\n",
+    "1. Click `Randomize` Button to randomly load a data from dataset.\n",
+    "2. Click `Predict` Button to predict the rewteet.\n",
+    "\n",
+    "![GUI predicts from existing datapoint](assets/gui-result.PNG)\n",
+    "\n",
+    "Optionally:\n",
+    "3. Edit the line edits to create your own custom datapoint before predicting. \n",
+    "\n",
+    "Note: \n",
+    "- Fields like `Mentions` and `Hashtags` have their own vocab (consult: `data/hashtags_vocab.txt` and `data/mentions_vocab.txt` for valid values. Random values will just get ignored.\n",
+    "- Each fields have their own format, like the ISO date string. Please follow the format strictly, otherwise it will fail to be parsed.\n",
+    "- Some fields can take in multiple values such as `Mentions` and `Hashtags`, in this case, use white space `\" \"` to delimit values.\n",
+    "\n",
+    "![GUI predicts custom datapoint](assets/gui-custom.PNG)"
    ]
   },
   {
@@ -853,7 +921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
