done with train.py

--- a/COVID-19 Retweet Prediction Report.ipynb
+++ b/COVID-19 Retweet Prediction Report.ipynb
@@ -50,18 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\calvin yusnoveri\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\gensim\\similarities\\__init__.py:15: UserWarning: The gensim.similarities.levenshtein submodule is disabled, because the optional Levenshtein package <https://pypi.org/project/python-Levenshtein/> is unavailable. Install Levenhstein (e.g. `pip install python-Levenshtein`) to suppress this warning.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# imports\n",
     "\n",
@@ -71,7 +62,12 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from gensim.models import Word2Vec"
+    "from gensim.models import Word2Vec\n",
+    "\n",
+    "import test\n",
+    "import predict\n",
+    "\n",
+    "from model import LinReg2"
    ]
   },
   {
@@ -264,6 +260,7 @@
     "In order to train our prediction model, we have also done some preprocessing of the features that are available in the dataset. All these changes to the raw features allow us to link these processed features to the final retweet prediction in a more precise manner. \n",
     "\n",
     "Clean Data (Final structure/form of data before it is fed into the model):\n",
+    "\n",
     "1. #Followers: Float. Log transformed: `log_10(x + 1)`\n",
     "2. #Friends: Float. Log transformed: `log_10(x + 1)`\n",
     "3. #Favorites: Float. Log transformed: `log_10(x + 1)`\n",
@@ -275,8 +272,12 @@
     "9. Time Int: Float. Log transformed: `log_10(x + 1)`\n",
     "10. Hashtags Embedding: (25, ) Vector.\n",
     "11. Mentions Embedding: (25, ) Vector.\n",
+    "12. #Followers Min, Max, Min: Float. Log transformed: `log_10(x + 1)`\n",
+    "12. #Friends Min, Max, Min: Float. Log transformed: `log_10(x + 1)`\n",
+    "12. #Retweets Min, Max, Min: Float. Log transformed: `log_10(x + 1)`\n",
+    "12. #Favorites Min, Max, Min: Float. Log transformed: `log_10(x + 1)`\n",
     "\n",
-    "In total, the input dimension (first layer) is `8 + 7 + 25 + 25 = (65, )`.\n",
+    "In total, the input dimension (first layer) is `8 + 7 + 25 + 25 + 12 = (77, )`.\n",
     "\n",
     "The target is: #Retweets: Integer. Log transformed: `log_10(x + 1)`"
    ]
@@ -817,9 +818,40 @@
    "source": [
     "# Model Architecture\n",
     "\n",
-    "We use ensemble methods (insert image):\n",
-    "1. 0-classifier (print out layer)\n",
-    "2. regression model (print out layer)"
+    "We created a simple 2-layer linear regression model to predict the retweet values. \n",
+    "\n",
+    "Initially, more layers were used but no significant improvement was observed and to avoid overfitting due to over-parameterized model, the final model only uses 2 simple fully connected layers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinReg2(\n",
+       "  (fc1): Linear(in_features=65, out_features=10, bias=True)\n",
+       "  (relu_h1): ReLU()\n",
+       "  (fc2): Linear(in_features=10, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Hyperparameters\n",
+    "input_size = 65\n",
+    "hidden_size = 10\n",
+    "output_size = 1\n",
+    "learningRate = 0.01\n",
+    "\n",
+    "model = LinReg2(input_size, hidden_size, output_size)\n",
+    "model"
    ]
   },
   {
@@ -876,9 +908,11 @@
     "![GUI predicts from existing datapoint](assets/gui-result.PNG)\n",
     "\n",
     "Optionally:\n",
-    "3. Edit the line edits to create your own custom datapoint before predicting. \n",
     "\n",
-    "Note: \n",
+    "3. Edit the line edits to create your own custom datapoint before predicting. Note: you will still be referencing the previous user. As shown at the `Username` at bottom right hand corner. i.e. the tweet will be treated as though it comes from this user. \n",
+    "\n",
+    "Note:\n",
+    "\n",
     "- Fields like `Mentions` and `Hashtags` have their own vocab (consult: `data/hashtags_vocab.txt` and `data/mentions_vocab.txt` for valid values. Random values will just get ignored.\n",
     "- Each fields have their own format, like the ISO date string. Please follow the format strictly, otherwise it will fail to be parsed.\n",
     "- Some fields can take in multiple values such as `Mentions` and `Hashtags`, in this case, use white space `\" \"` to delimit values.\n",
@@ -896,13 +930,6 @@
     "2. Report: \n",
     "3. Reference papers:"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -921,7 +948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
