--- a/COVID-19 Retweet Prediction Report.ipynb
+++ b/COVID-19 Retweet Prediction Report.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "As COVID-19 impacts our daily routine and changed the norms that we accepted prior to the pandemic, there are some interests in quantifying its impacts on the global stage. One way to measure such impact is to monitor the explosion of activity in social media usage such as Twitter and Youtube, where most people who are not able to move freely, shares their thoughts through such platforms. Twitter in particular, provides a platform that allows the users to post their thoughts in a succint manner and add hashtags or mentions to increase the tweet's exposure on the platform. Our task will thus be to predict the number of retweets a tweet that is COVID-19 related will have using the TweetsCOV-19 dataset.\n",
     "\n",
-    "At the end of this project, we created a Linear Regression Model and an interactive GUI to predict retweet count based on input parameters found in TweetsCOV-19 dataset. Custome values can also be input into the model.\n",
+    "At the end of this project, we created a Linear Regression Model and an interactive GUI to predict a \"ballpark\" value of retweet count based on input parameters found in TweetsCOV-19 dataset. Custom values can also be input into the model.\n",
     "\n",
     "![Final Result](assets/gui-result.PNG)"
    ]
@@ -50,9 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\calvin yusnoveri\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\gensim\\similarities\\__init__.py:15: UserWarning: The gensim.similarities.levenshtein submodule is disabled, because the optional Levenshtein package <https://pypi.org/project/python-Levenshtein/> is unavailable. Install Levenhstein (e.g. `pip install python-Levenshtein`) to suppress this warning.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "# imports\n",
     "\n",
@@ -272,10 +281,10 @@
     "9. Time Int: Float. Log transformed: `log_10(x + 1)`\n",
     "10. Hashtags Embedding: (25, ) Vector.\n",
     "11. Mentions Embedding: (25, ) Vector.\n",
-    "12. #Followers Min, Max, Min: Float. Log transformed: `log_10(x + 1)`\n",
-    "12. #Friends Min, Max, Min: Float. Log transformed: `log_10(x + 1)`\n",
-    "12. #Retweets Min, Max, Min: Float. Log transformed: `log_10(x + 1)`\n",
-    "12. #Favorites Min, Max, Min: Float. Log transformed: `log_10(x + 1)`\n",
+    "12. #Followers Min, Max, Mean: Float. Log transformed: `log_10(x + 1)`\n",
+    "12. #Friends Min, Max, Mean: Float. Log transformed: `log_10(x + 1)`\n",
+    "12. #Retweets Min, Max, Mean: Float. Log transformed: `log_10(x + 1)`\n",
+    "12. #Favorites Min, Max, Mean: Float. Log transformed: `log_10(x + 1)`\n",
     "\n",
     "In total, the input dimension (first layer) is `8 + 7 + 25 + 25 + 12 = (77, )`.\n",
     "\n",
@@ -862,9 +871,76 @@
     "\n",
     "Loss curve image. (Maybe save to .txt when training so can read independently and display with matplotlib independently.)\n",
     "\n",
-    "Accuracy on train and test set. (just run test.py on test set)\n",
+    "\n",
     "\n",
     "Validation images. (just screenshot gui)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accuracy\n",
+    "\n",
+    "To measure the accuracy of the model, we take the log10 of the absolute difference between the prediction and true retweet value + 1. `log10(|y - t| + 1)`\n",
+    "\n",
+    "What this essentially means is that we're looking at whether or not the model is able to arrive on a prediction that is within a certain order of magnitude of the actual retweet value instead of whether or not it is able to accurately predict the retweet count. We interpret this as reasonable implementation of what predicting the \"ballkpark\" figure of a retweet is."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Min Order of Magnitude Deviation: 0.0\n",
+      "Mean Order of Magnitude Deviation: 0.4959347980368691\n",
+      "Median Order of Magnitude Deviation: 0.4959347980368691\n",
+      "Max Order of Magnitude Deviation: 4.7193975864238835\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{0.0: 79.44831353270517,\n",
+       " 1.0: 17.647862094448595,\n",
+       " 2.0: 2.72469495786844,\n",
+       " 3.0: 0.1694901639475946,\n",
+       " 4.0: 0.009639251030194954}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies = np.loadtxt(\"./data/accuracy_0608-2059.txt\", delimiter='\\n')\n",
+    "\n",
+    "print(f\"\"\"\n",
+    "Min Order of Magnitude Deviation: {np.min(accuracies)}\n",
+    "Mean Order of Magnitude Deviation: {np.mean(accuracies)}\n",
+    "Median Order of Magnitude Deviation: {np.mean(accuracies)}\n",
+    "Max Order of Magnitude Deviation: {np.max(accuracies)}\n",
+    "\"\"\")\n",
+    "\n",
+    "frequency, bins = np.histogram(accuracies, bins=5, range=[0, 5])\n",
+    "accuracies_dist = dict(zip(bins, frequency/len(accuracies) * 100))\n",
+    "accuracies_dist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can from the result, the worst deviation is around `4.72` order of magnitude away (difference of `50,000 retweets`). But this extreme deviation is very rare, as a deviation of `4.0+` occurrs less than `0.01%` of the time in the test set. \n",
+    "\n",
+    "In fact, the model does pretty well in most cases (`~97%` of cases), as its prediction on `79.4%` of test data lands within `0.0 - 0.99` order of magnitude of the actual tweet (difference of `10 retweet`). Afterwhich, `17.6%` of next portion of test data prediction falls within `1.00 - 1.99` order of magnitude (difference of `100 retweet`)."
    ]
   },
   {
@@ -903,7 +979,7 @@
     "## Using the GUI\n",
     "\n",
     "1. Click `Randomize` Button to randomly load a data from dataset.\n",
-    "2. Click `Predict` Button to predict the rewteet.\n",
+    "2. Click `Predict` Button to predict the retweet.\n",
     "\n",
     "![GUI predicts from existing datapoint](assets/gui-result.PNG)\n",
     "\n",
@@ -948,7 +1024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
